Styling fix for project containers on mobile

--- a/CSS/home-style.css
+++ b/CSS/home-style.css
@@ -102,7 +102,7 @@
 		background-color: rgba(255, 255, 255, 0.4);
 		box-shadow: 10px 10px 12px 0 rgba(126, 126, 126, 0.2),
 			-10px -10px 25px 0 rgba(228, 228, 228, 0.3);
-		border-radius: 30px;
+		border-radius: 8px;
 		border: 1px solid whitesmoke;
 		padding: 2em;
 	}
